fix cut off notif

--- a/src/components/css/NavigationBar.css
+++ b/src/components/css/NavigationBar.css
@@ -164,7 +164,7 @@ html::-webkit-scrollbar-thumb:hover {
     border-radius: 50%;
     width: 46px;
     height: 46px;
-    margin-left: 20px;
+    margin-left: 10px;
     margin-right: 20px;
     position: relative;
     flex-shrink: 0;
@@ -180,7 +180,6 @@ html::-webkit-scrollbar-thumb:hover {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    overflow: hidden;
     transition: opacity 0.2s ease;
 }
 
